# lean4repo-utils

./: .gitignore  LICENSE  NOTICE  README.md  ROADMAP.md  SESSIONS.md  pyproject.toml
.claude/workflows/: session-runner.js
.github/: dependabot.yml
.github/workflows/: ci.yml
common/: README.md  pyproject.toml
common/src/leanrepo_common/: __init__.py  diff_utils.py  lean_utils.py  llm_provider.py
common/tests/: test_diff_utils.py  test_lean_utils.py  test_lean_utils_matcher.py  test_lean_utils_scan.py  test_llm_provider.py
review/: BOOTSTRAP_toolkit-gaps.md  IMPROVEMENTS_FROM_ABF26_REVIEWS.md  README.md  action.yml  coverage_matrix.py  discover_files.py  lean_info_extractor.py  lean_tools.py  paper_lean_evidence.py  pyproject.toml  resolve_pr_head.sh  review.py
review/examples/: ai-review.yml
review/prompts/: _operating_contract.md  analyze_spec.md  cross_file_analysis.md  dependent_impact.md  lean4_checklist.md  review_code_with_spec.md  review_file.md  synthesize_summary.md  triage.md  verdict_rules.md  verify_finding.md
review/tests/: README.md  test_coverage_matrix.py  test_discover_files.py  test_e2e_lean.py  test_lean_info_extractor.py  test_lean_tools.py  test_paper_lean_evidence.py  test_review.py
sorry-tracker/: README.md  analysis.py  detection.py  issues.py  pyproject.toml  references.py
sorry-tracker/tests/: test_analysis.py
summary/: README.md  action.yml  pyproject.toml  summary.py
summary/prompts/: additional_instructions.md  summarize_file.md  synthesize_summary.md  triage.md  triage_tiered.md
summary/tests/: test_summary.py
