[project]
name = "leanrepo-common"
version = "0.1.0"
description = "Shared OpenRouter LLM provider and Lean 4 source utilities for the leanrepo-utils tools."
requires-python = ">=3.11"
dependencies = [
    "openai",
    "pydantic",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/leanrepo_common"]

[dependency-groups]
dev = [
    "pytest",
    "ruff",
]
