[project]
name = "lean-summary"
version = "0.1.0"
description = "GitHub Action: AI-generated summaries for Lean 4 pull requests, via OpenRouter."
requires-python = ">=3.11"
dependencies = [
    "leanrepo-common",
    "PyGithub",
    "pydantic",
]

[tool.uv]
# Script-runner action, not an installable package: uv manages the dependency
# venv only and never tries to build/install this project itself.
package = false

[tool.uv.sources]
leanrepo-common = { workspace = true }

[dependency-groups]
dev = [
    "pytest",
    "ruff",
    "pyyaml",
]

[tool.pytest.ini_options]
# The scripts live at the project root (not an installed package), so put it
# on sys.path for `uv run pytest`.
pythonpath = ["."]

[tool.ruff.lint]
# Defaults (E4/E7/E9, F) plus whitespace checks (W) so trailing/blank-line
# whitespace can't creep back in.
extend-select = ["W"]

[tool.ruff.lint.per-file-ignores]
# Tests must register github module stubs in sys.modules before importing
# summary, so the summary import is deliberately not at the top of the file.
"tests/*" = ["E402"]
